tests/baselines/reference/moduleResolutionWithExtensions_notSupported.errors.txt
/a.ts(1,17): error TS6142: Module './tsx' was resolved to '/tsx.tsx', but '--jsx' is not set.
/a.ts(2,17): error TS6142: Module './jsx' was resolved to '/jsx.jsx', but '--jsx' is not set.


==== /a.ts (2 errors) ====
    import tsx from "./tsx"; // Not allowed.
                    ~~~~~~~
!!! error TS6142: Module './tsx' was resolved to '/tsx.tsx', but '--jsx' is not set.
    import jsx from "./jsx"; // Not allowed.
                    ~~~~~~~
!!! error TS6142: Module './jsx' was resolved to '/jsx.jsx', but '--jsx' is not set.
    import js from "./js"; // OK because it's an untyped module.
    
==== /tsx.tsx (0 errors) ====
    
==== /jsx.jsx (0 errors) ====
    
==== /js.js (0 errors) ====
    